Display MIDI device name and let users refresh the MIDI input

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,10 @@
   #notesDiv{
     text-align:center;
   }
+  #midiSettings{
+    text-align:center;
+  }
+
+  #midiDevice{
+    font-weight: bold;
+  }
