--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 .note{
     font-family: "MusiQwik";
     font-size: 16em;
