Added functionality to generate 10 random notes and remove them once played, plus re-generate 10 new notes once finished playing 10

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,12 +16,11 @@
   font-family: "MusiQwik";
   src: url("assets/MusiQwik.ttf") format("truetype");
 }
-#notesDiv, #dupa{
-  text-align:center;
+#dupa, #notesDiv, #clef{
   margin-top: 0.1em;
 }
-#clef{
-  margin-top: 0.1em;
+#notesDiv{
+  margin-left: 1em;
 }
 
 #midiDevice{
